<resources>
    <string name="app_name">Voting App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Voting App Beta</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_polls_oficial">Official Polls</string>
    <string name="menu_polls_informal">Informal Polls</string>
    <string name="creditsString">Credits</string>
    <string name="credits">
        ToDo
    </string>
    <string name="credits2">
        All rights reserved
    </string>
    <string name="confirmRegistration">Confirm registration</string>
    <string name="loginFromRegister">Already registered? Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="logout">LOGOUT</string>
    <string name="login">Login</string>
    <string name="confirm_login">Confirm Login</string>
    <string name="not_registered_create_new_account">Not registered? Create new account</string>
    <string name="welcome">Welcome Home,\n%s!</string>
    <string name="hello">Hello</string>
    <string name="saidHello">Someone said hello</string>
    <string name="work">Heavy work</string>
    <string name="processing">Something heavy is being processed&#8230;</string>
    <string name="floatingButton">Floating Button for Score Board</string>
    <string name="longPressFinishGame">Long press to finish game</string>
    <string name="broadcast_s1">Replace Successful</string>
    <string name="broadcast_s2">Broadcast received my_package_replace intent</string>
    <string name="loggedIn">You are logged in</string>
    <string name="loginRequired">Please Login</string>
    <string name="noText" translatable="false" />
    <string name="title_activity_news" translatable="false">NewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
</resources>
